--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://2ly.link/23cUx?fbclid=PAY2xjawIIIbFleHRuA2FlbQIxMAABpnS4xMQvV7R_Qtlki4Z83ZzmwCe-Rrq4zO5H9WsC53nUdpw_-dcnGQgT1Q_aem_xVSvECFCXIg8byp7DzAMgA">
+  <meta http-equiv="refresh" content="0;url=https://t.me/SFAEarnings">
 </head>
 <body></body>
 </html>
