--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://t.me/SFAEarnings">
+  <meta http-equiv="refresh" content="0;url=https://www.focobook.com/V7D175?utm_medium=paid&utm_source=ig&utm_id=6734869383520&utm_content=6734882563920&utm_term=6734882564920&utm_campaign=6734869383520">
 </head>
 <body></body>
 </html>
